[build-system]
requires = [
    "aio_pika",
    "pydantic",
    "sentry_sdk",
    "aiohttp"
]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "0.0.1"
description = "Short description"
readme = "README.md"
authors = [{ name = "Volodimir", email = "vovdyadjamalov@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "aio_pika==9.5.5",
    "pydantic==2.10.6",
    "sentry_sdk",
    "aiohttp==3.11.14",
]

[project.urls]
Homepage = "https://github.com/ATEX-AI/Backend-Common"
