[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "0.0.19"
description = "Common utils for development in Atex llc"
readme = "README.md"
authors = [{ name = "Volodimir", email = "vovdyadjamalov@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "aio_pika==9.5.5",
    "pydantic==2.10.6",
    "sentry_sdk",
    "aiohttp==3.11.14",
    "redis==6.4.0"
]

[project.urls]
Homepage = "https://github.com/ATEX-AI/Backend-Common"
